# mcp-task-manager

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
core/: __init__.py  models.py  repository.py
tools/: __init__.py
